--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -9,7 +9,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Install packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install xmlstarlet
+
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Setup Java 11 and Apache Maven
         uses: actions/setup-java@v3
@@ -20,6 +26,11 @@ jobs:
           server-password: MAVEN_CENTRAL_TOKEN
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
+
+      - name: Configure GIT
+        run: |
+          git config --global user.name "Gluon Bot"
+          git config --global user.email "githubbot@gluonhq.com"
 
       - name: Cache Maven packages
         uses: actions/cache@v2
@@ -44,3 +55,16 @@ jobs:
         with:
           token: ${{ secrets.PAT }}
           generate_release_notes: true
+
+      - name: Commit next development version
+        if: steps.deploy.outputs.exit_code == 0
+        run: |
+          TAG=${GITHUB_REF/refs\/tags\//}
+          NEW_PROJECT_VERSION=${TAG%.*}.$((${TAG##*.} + 1))
+          echo "Update project version to next snapshot version"
+          mvn versions:set -DnewVersion=$NEW_PROJECT_VERSION-SNAPSHOT -DgenerateBackupPoms=false
+          git commit pom.xml -m "Prepare development of $NEW_PROJECT_VERSION"
+          git push https://gluon-bot:$PAT@github.com/$GITHUB_REPOSITORY HEAD:master
+        shell: bash
+        env:
+          PAT: ${{ secrets.PAT }}
