--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.gluonhq</groupId>
         <artifactId>rich-text-area</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>rich-text-area-control</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
