--- a/rta/pom.xml
+++ b/rta/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rich-text-area-control</artifactId>
+    <artifactId>rich-text-area</artifactId>
     <packaging>jar</packaging>
 
     <parent>
