--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -23,7 +23,7 @@
     <dependencies>
         <dependency>
             <groupId>com.gluonhq</groupId>
-            <artifactId>rich-text-area-control</artifactId>
+            <artifactId>rich-text-area</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
