--- a/rta/pom.xml
+++ b/rta/pom.xml
@@ -20,6 +20,7 @@
         <emoji.version>1.1.0</emoji.version>
         <test.headless/>
         <test.javafx.version>26-ea+18</test.javafx.version>
+        <!-- <test.javafx.version>26-internal+0-2025-12-14-134218</test.javafx.version> -->
     </properties>
 
     <dependencies>
